[package]
name = "radix_fmt_ng"
version = "1.0.0"
authors = [
    "Félix <felix-dev@daudre-vignier.fr>",
    "Krysztal Huang <krysztal.huang@outlook.com>",
]
license = "Apache-2.0"
documentation = "https://docs.rs/radix_fmt_ng/"
repository = "https://github.com/Krysztal112233/radix_fmt_ng"
edition = "2021"

description = "Format a number in an arbitrary radix"
keywords = ["format", "radix", "base", "number", "integer"]
categories = ["value-formatting"]
readme = "README.md"

[dependencies]

[dev-dependencies]
fluid = "0.4"
